src/test/ui/consts/const-call.stderr
error[E0015]: calls in constants are limited to constant functions, tuple structs and tuple variants
  --> $DIR/const-call.rs:16:17
   |
LL |     let _ = [0; f(2)];
   |                 ^^^^

error[E0080]: could not evaluate repeat length
  --> $DIR/const-call.rs:16:17
   |
LL |     let _ = [0; f(2)];
   |                 ^^^^ calling non-const fn `f`

error: aborting due to 2 previous errors

Some errors occurred: E0015, E0080.
For more information about an error, try `rustc --explain E0015`.
